# invenio-rest

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  MANIFEST.in  README.rst  RELEASE-NOTES.rst  pytest.ini  requirements-devel.txt  run-tests.sh  setup.cfg  setup.py
.github/workflows/: pypi-publish.yml  tests.yml
.tx/: config
docs/: Makefile  api.rst  conf.py  configuration.rst  index.rst  make.bat  requirements.txt  usage.rst
examples/: app-setup.sh  app-teardown.sh  app.py  requirements.txt
invenio_rest/: __init__.py  config.py  csrf.py  decorators.py  dispatch.py  errors.py  ext.py  key_functions.py  serializer.py  version.py  views.py
invenio_rest/templates/invenio_rest/: index.html
tests/: conftest.py  test_csrf.py  test_decorators.py  test_errors.py  test_examples_app.py  test_invenio_rest.py  test_rate_limits.py  test_serializer.py
