# -*- coding: utf-8 -*-
#
# This file is part of Invenio.
# Copyright (C) 2015-2018 CERN.
# Copyright (C) 2022 Graz University of Technology.
#
# Invenio is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = invenio-rest
version = attr: invenio_rest.__version__
description = "REST API module for Invenio."
long_description = file: README.rst, CHANGES.rst
keywords = invenio rest api module
license = MIT
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/invenio-rest
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    Flask-CORS>=2.1.0
    invenio-base>=1.2.5
    itsdangerous>=1.1,<2.1
    marshmallow>=2.15.2
    webargs>=5.5.0,<6.0.0

[options.extras_require]
tests =
    pytest-black>=0.3.0,<0.3.10
    xmltodict>=0.11.0
    pytest-invenio>=1.4.0
    Sphinx>=4.5.0
# Kept for backwards compatibility
cors =
docs =

[options.entry_points]
invenio_base.apps =
    invenio_rest = invenio_rest.csrf:CSRFTokenMiddleware
invenio_base.api_apps =
    invenio_rest = invenio_rest:InvenioREST

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
pep8ignore = docs/conf.py ALL
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_rest --cov-report=term-missing
testpaths = tests invenio_rest
doctest_optionflags = DONT_ACCEPT_TRUE_FOR_1 ELLIPSIS IGNORE_EXCEPTION_DETAIL
filterwarnings = ignore::pytest.PytestDeprecationWarning
